--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,9 @@
 <body>
 
     <div id="content">
-        <h2 id="logo">ENCIPHERA</h2>
+        <div id="logo">
+            <img src="{{ url_for('static', filename='images/logo.png') }}">
+        </div>
 
         <p>
             ENCIPHERA encrypts your notes on-device so only you can read them.
