--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENCIPHERA - Signup</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
     <style>
         @font-face {
             font-family: 'Nunito';
@@ -36,8 +36,9 @@
             <input type="password" id="confirm_password" name="confirm_password" placeholder="Re-enter password"
                 required>
 
-            <button type="submit">Sign Up</button>
+            <button type="submit">GET OTP</button>
         </form>
+
         <div id="errors">
         </div>
     </div>
