--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -50,20 +50,6 @@
             margin-bottom: 50px;
         }
 
-        #start {
-            padding: 12px 30px;
-            font-size: 1rem;
-            background-color: #ffffff;
-            color: #000000;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #start:hover {
-            background-color: #333;
-        }
-
         #card-container {
             display: flex;
             flex-direction: column;
@@ -133,11 +119,57 @@
                 margin: 10px 0;
             }
         }
+
+        header {
+            position: relative;
+            width: 100%;
+            height: 50px;
+
+        }
+
+        #username {
+            position: absolute;
+            top: 10px;
+            right: 50px;
+            font-size: 1.5rem;
+            font-family: 'Nunito';
+            color: #ffffff;
+        }
+
+        #start {
+            padding: 12px 30px;
+            font-size: 1rem;
+            background-color: #ffffff;
+            color: #000000;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            position: relative;
+            transition: all 0.3s ease;
+        }
+
+        #start::after {
+            content: '→';
+            margin-left: 10px;
+            transition: margin 0.3s ease;
+        }
+
+        #start:hover::after {
+            margin-left: 20px;
+        }
     </style>
 
 </head>
 
 <body>
+
+    <header>
+        <div id="username">
+            {% if username %}
+            {{ username }}
+            {% endif %}
+        </div>
+    </header>
     <div id="heading">
         <h2>ENCRYPT. PROTECT .CONTROL</h2>
         <p>Your notes are encrypted on our servers using powerful AES-256 encryption.
