--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 
     <footer>
         <a href="https://github.com/Neravahn/ENCIPHERA" target="_blank">
-            <img src="{{ url_for('static', filename='images/icons8-github-50.png') }}" alt="GitHub"
+            <img src="{{ url_for('static', filename='images/github.png') }}" alt="GitHub"
                 style="width:25px; height:25px; vertical-align:middle; margin-right:2px;margin-bottom:2px; filter: invert(100%);">
             GITHUB
         </a>
