making a file manager

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -333,6 +333,7 @@
     <div id="popup">
         <label for="file_format">Select file format</label>
         <select id="file_format">
+            <option value="" disabled>Select file type</option>
             <option value="txt">.txt (Text File)</option>
             <option value="pdf">.pdf (PDF Document)</option>
             <option value="png">.png (Image)</option>
