text file saving and viewing WIP

--- a/templates/file_manager.html
+++ b/templates/file_manager.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ENCIPHERA - File Manager</title>
     <style>
         @font-face {
             font-family: 'SigmarOne';
@@ -76,7 +76,7 @@
         <h2>Your Encrypted Files</h2>
         <div id="header">
             <select id="file_type">
-                <option value="" disabled>Select file type</option>
+                <option value="all">All</option>
                 <option value="txt">.txt (Text File)</option>
                 <option value="pdf">.pdf (PDF Document)</option>
                 <option value="png">.png (Image)</option>
